# rabbitkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRODUCTION_AUDIT.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/: run-gates.sh
.claude/rules/: core.md  testing.md
.claude/skills/debug-rabbitmq/: SKILL.md  checklist.md
.claude/skills/gates/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/using-rabbitkit/: SKILL.md  config-reference.md
.cursor/rules/: rabbitkit.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-matrix.yml  docs.yml  integration.yml  release.yml  security.yml  soak.yml
benchmarks/: __main__.py  _common.py  _results.py  _stats.py  advanced.py  bench_failure.py  bench_latency.py  bench_lifecycle.py  bench_matrix.py  bench_overhead.py  bench_pipeline.py  bench_resources.py  bench_sync.py  bench_sync_batch.py  bench_throughput.py  chaos_suite.py  load_test_handler_latency.py  load_test_publisher.py  load_test_sync.py  load_test_worker_pool.py  soak.py  soak_test.py
deploy/: consumer.yaml
docs/: IMPROVEMENT_PLAN.md  ack-policy.md  benchmarking.md  comparison.md  concurrency-model.md  index.md  kubernetes.md  message-safety.md  migrating-to-rabbitkit.md  migration.md  observability.md  ordering-guarantees.md  quorum-migration.md  rabbitmq-retry-architecture.md  retry-and-dlq.md  roadmap.md  security.md  stability-policy.md  troubleshooting.md
docs/api/: asyncapi.md  brokers.md  cli.md  config.md  core.md  dashboard.md  di.md  fastapi.md  health.md  highload.md  locking.md  management.md  messages.md  middleware.md  results.md  routing.md  rpc.md  serialization.md  streams.md  testing.md
docs/css/: extra.css
docs/guide/: full-guide.md  getting-started.md  overview.md
docs/production/: checklist.md  idempotency.md  patterns.md  scale.md
examples/: README.md  __init__.py  smoke_test.py
examples/advanced/: 01_dlq_inspector.py  02_stream_queues.py  03_distributed_locking.py  04_result_backends.py  05_asyncapi_docs.py  06_management_api.py  07_monitoring_dashboard.py
examples/basic_consumer/: publish.py  worker.py
examples/config/: 01_rabbit_config.py  02_env_config.py  03_structured_logging.py
examples/dependency_injection/: 01_depends.py  02_generator_deps.py  03_header_path_context.py
examples/fastapi_lifespan/: app.py
examples/full_config/: README.md  async_app.py  sync_app.py
examples/graceful_shutdown/: worker.py
examples/header_inspector/: README.md  chaos_reconnect.py  docker-compose.yml  inspect_headers.py
examples/highload/: 01_worker_pools.py  02_batch_publisher.py  03_batch_acker.py  04_backpressure.py  05_ten_queues_high_volume.py
examples/integrations/: 01_fastapi.py  02_app_lifecycle.py  03_testing.py
examples/kubernetes_worker/: kubernetes.yaml  worker.py
examples/message_handling/: 01_ack_policies.py  02_rabbit_message.py  03_pydantic_validation.py  04_exception_settlement.py
examples/middleware/: 01_retry.py  02_compression.py  03_deduplication.py  04_circuit_breaker.py  05_rate_limit.py  06_signing.py  07_timeout.py  08_tracing.py  09_custom_middleware.py
examples/order_service/: __init__.py  broker.py  config.py  dlq_tools.py  error_mapping.py  errors.py  fastapi_app.py  handlers.py  management_tools.py  models.py  services.py
examples/pipeline_twitter_dm/: README.md  async_pipeline.py  sync_pipeline.py
examples/poison_message_handling/: worker.py
examples/production_pipeline/: README.md  app.py  producer.py  test_pipeline.py
examples/publish_message/: publish.py
examples/publisher_confirms/: worker.py
examples/pydantic_validation/: publish.py  worker.py
examples/quickstart/: 01_sync_broker.py  02_async_broker.py
examples/retry_dlx/: docker-compose.yml  worker.py
examples/routing/: 01_basic_routing.py  02_modular_router.py  03_exchange_types.py  04_topic_wildcards.py  05_subscriber_filtering.py
examples/rpc/: 01_sync_rpc.py  02_async_rpc.py  03_broker_request.py
examples/serialization/: 01_json.py  02_pydantic.py  03_msgspec.py  04_pipeline.py
examples/testbroker_pytest/: test_handler.py
examples/two_stage_chain/: README.md  chain.py
scripts/: repro_batch_outage_wedge.py
src/rabbitkit/: __init__.py  _version.py  concurrency.py  dlq.py  fastapi.py  health.py  locking.py  management.py  queue_metrics.py  rpc.py  streams.py
src/rabbitkit/aio/: __init__.py
src/rabbitkit/async_/: __init__.py  batch.py  broker.py  connection.py  pool.py  transport.py
src/rabbitkit/asyncapi/: __init__.py  generator.py  schema.py
src/rabbitkit/cli/: __init__.py  _utils.py
src/rabbitkit/core/: __init__.py  app.py  config.py  env_config.py  errors.py  logging.py  message.py  path.py  pipeline.py  protocols.py  registry.py  route.py  router.py  topology.py  topology_dispatch.py  types.py
src/rabbitkit/dashboard/: __init__.py  app.py
src/rabbitkit/di/: __init__.py  context.py  depends.py  resolver.py
src/rabbitkit/experimental/: __init__.py
src/rabbitkit/highload/: __init__.py  backpressure.py  batch.py
src/rabbitkit/middleware/: __init__.py  base.py  circuit_breaker.py  compression.py  deduplication.py  error_classifier.py  (+8 more)
tests/: conftest.py
tests/integration/: test_pipeline_twitter_dm.py  test_real_rabbitmq.py  test_resilience_scenarios.py  test_smoke.py
tests/property/: __init__.py  test_serialization_roundtrip.py
tests/security/: __init__.py  test_compression_bomb.py  test_signing_replay.py
tests/unit/: test_asyncapi.py  test_concurrency.py  test_dashboard.py  test_dlq.py  test_fastapi.py  test_health.py  test_health_watch.py  test_locking.py  test_management.py  test_public_api.py  test_queue_metrics.py  test_readme_examples.py  test_regression.py  test_results.py  test_rpc.py  test_streams.py
(+89 files in other folders)
