[project]
name = "rabbitkit"
version = "0.1.0"
description = "Production-grade RabbitMQ toolkit — sync/async, decorator routing, retry, compression, full configurability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Talaat Magdy", email = "talaatmagdy75@gmail.com" },
]
keywords = [
    "rabbitmq", "amqp", "messaging", "pika", "aio-pika",
    "microservices", "event-driven", "message-queue",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "structlog>=23.1.0,<26.0.0",
]

[project.optional-dependencies]
sync        = ["pika>=1.3.0,<2.0.0"]
async       = ["aio-pika>=9.0.0,<10.0.0"]
all-brokers = ["rabbitkit[sync,async]"]
obskit      = ["obskit>=3.1.0"]
redis       = ["redis>=5.0.0,<6.0.0"]
pydantic    = ["pydantic>=2.0.0,<3.0.0"]
msgspec     = ["msgspec>=0.18.0"]
fastapi     = ["fastapi>=0.111.0"]
compression = ["zstandard>=0.22.0"]
all         = ["rabbitkit[all-brokers,obskit,redis,pydantic,compression]"]
dev         = [
    "rabbitkit[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.2",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "T20",  # flake8-print
]
ignore = [
    "S101",  # assert usage (used in tests and guards)
]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
