[project]
name = "rabbitkit"
version = "0.9.1"
description = "Production-grade RabbitMQ toolkit — sync/async, decorator routing, retry, compression, full configurability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Talaat Magdy", email = "talaatmagdy75@gmail.com" },
]
keywords = [
    "rabbitmq", "amqp", "messaging", "pika", "aio-pika",
    "microservices", "event-driven", "message-queue",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "structlog>=23.1.0,<26.0.0",
]

[project.optional-dependencies]
sync        = ["pika>=1.3.0,<2.0.0"]
async       = ["aio-pika>=9.1.0,<10.0.0"]
all-brokers = ["rabbitkit[sync,async]"]
redis       = ["redis>=5.0.0,<6.0.0"]
pydantic    = ["pydantic>=2.0.0,<3.0.0"]
msgspec     = ["msgspec>=0.18.0,<1.0.0"]
fastapi     = ["fastapi>=0.111.0,<1.0.0"]
compression = ["zstandard>=0.22.0,<1.0.0"]
management = ["aiohttp>=3.9.0,<4.0.0"]
otel       = ["opentelemetry-api>=1.20,<2"]
settings    = ["pydantic-settings>=2.0.0,<3.0.0"]
cli         = ["typer>=0.12.0,<1.0.0"]
dashboard   = ["starlette>=0.37.0,<2.0.0", "uvicorn>=0.29.0,<1.0.0"]
reload      = ["watchfiles>=0.21.0,<2.0.0"]
all         = ["rabbitkit[all-brokers,otel,redis,pydantic,msgspec,fastapi,compression,settings,cli,dashboard,reload,management]"]
dev         = [
    "rabbitkit[all]",
    "pytest>=8.0",
    "httpx>=0.27,<1.0",  # starlette TestClient (dashboard tests)
    "prometheus-client>=0.20,<2.0",  # PrometheusCollector tests
    "psutil>=5.9",  # bench_resources (memory/FD tracking)
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.2",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "hypothesis>=6.100.0",
    "pre-commit>=3.7.0",
]
integration = [
    "rabbitkit[dev]",
    "testcontainers[rabbitmq]>=4.0.0",
    "docker>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/talaatmagdyx/rabbitkit"
Documentation = "https://talaatmagdyx.github.io/rabbitkit/"
Repository = "https://github.com/talaatmagdyx/rabbitkit"
Changelog = "https://github.com/talaatmagdyx/rabbitkit/blob/main/CHANGELOG.md"
Issues = "https://github.com/talaatmagdyx/rabbitkit/issues"

[project.scripts]
rabbitkit = "rabbitkit.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "T20",  # flake8-print
]
ignore = [
    "S101",    # assert usage (tests + guards)
    "TC001",   # app imports in type-checking block — runtime imports by design
    "TC003",   # stdlib imports in type-checking block — runtime imports by design
    "BLE001",  # blind exception — intentional in transport/pool/pipeline cleanup
    "SIM117",  # nested with — readability preference in test mocking
    "UP042",   # str+Enum inheritance — intentional for JSON serialization
    "S110",    # try-except-pass — intentional defensive guards in DI/pool
    "S105",    # hardcoded password — default config values ("guest")
    "S106",    # hardcoded password arg — test fixtures
    "E731",    # lambda assignment — test convenience
    "SIM105",  # contextlib.suppress — preference
    "SIM108",  # ternary — readability preference
    "SIM102",  # nested if — readability preference
    "N818",    # exception naming — AckMessage/NackMessage/RejectMessage are control flow
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S311", "RUF006"]
"benchmarks/**/*.py" = ["T20", "S603", "S607"]  # benchmark/chaos scripts may shell out (docker)
"examples/**/*.py" = ["T20", "S311", "S603", "S607"]  # examples print, use random, and chaos scripts shell out to docker

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: integration tests (may need RabbitMQ)"]
filterwarnings = [
    # rabbitkit's own operator-guidance warnings, exercised deliberately by
    # tests (dedicated pytest.warns tests still assert they fire — pytest.warns
    # bypasses these filters). Real users still see them.
    "ignore:Starting a single-worker sync consumer:RuntimeWarning",
    "ignore:SigningMiddleware is using the default in-memory:RuntimeWarning",
    # third-party: testcontainers' own deprecated decorator
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]
